# mitranew

./: .gitignore  .replit  Growth_Value_Scoring_System.xlsx  README.md  app.py  app_backup.py  app_backup_before_fix.py  app_enhanced.py  app_fixed.py  app_new.py  basic_test.py  beta_risk_analysis.py  buy_zone_strategy (1).py  check_deps.py  combined_app.py  database.py  db_utils.py  detailed_fundamental_score.py  enhanced_fundamental_scorer.py  env_test.py  eod_test.py  eodhd_app.py  financial_data.py  financial_metrics.py  financial_metrics_direct.py  financial_statements.py  format_utils.py  index.html  indian_markets.py  init_db.py  init_db_safe.py  minimal_requirements.txt  minimal_streamlit.py  minimal_test.py  minimal_test_app.py  netlify.toml  peer_comparison.py  project_summary.md  pyproject.toml  requirements.txt  (+18 more)
.streamlit/: config.toml
attached_assets/: Pasted-You-are-a-financial-analyst-specializing-in-creating-concise-company-reports-I-need-a-comprehensive-1747444317692.txt
